[gd_scene load_steps=2 format=3 uid="uid://h3hxd0hefo8s"]

[ext_resource type="Script" uid="uid://c0x8hg3u8bbtk" path="res://lobby_interface.gd" id="1_26cq6"]

[node name="LobbyInterface" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_26cq6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Create Server"

[node name="HostButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Host"

[node name="VBoxContainer1" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer1"]
layout_mode = 2
text = "Create Client"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer1"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
layout_mode = 2
text = "Server IP"

[node name="JoinIP" type="LineEdit" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="NetworkInfo" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer1/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
